<resources>

    <string name="app_name">DroidMax</string>
    <string name="app_name_debug">[D] DroidMax</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--add rule fragment-->
    <string name="hint_rule_name">Rule Name</string>
    <string name="label_conditions">Conditions</string>
    <string name="label_actions">Actions</string>
    <string name="button_add_condition">Add Condition</string>
    <string name="button_add_action">Add Action</string>
    <string name="button_add">Add Rule</string>
    <string name="title_add_new_rule">Add New Rule</string>
    <string name="title_add_new_condition">Add New Condition</string>
    <string name="title_add_new_action">Add New Action</string>

    <array name="array_category_condition">
        <item>Battery</item>
        <item>Bluetooth</item>
        <item>Location</item>
        <item>Network</item>
        <item>Weather</item>
    </array>

    <array name="array_category_action">
        <item>Bluetooth</item>
        <item>Wifi</item>
        <item>GPS Location</item>
        <item>Phone Mode</item>
        <item>Push Notification</item>
    </array>

    <array name="array_rule_tab">
        <item>MY RULES</item>
        <item>RECOMMEND</item>

    </array>

</resources>
