...
    android:background="@color/fragment_background"
    tools:context="com.icetea09.droidmax.fragment.AddNewRuleFragment">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_add_rule"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_rule_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:hint="@string/hint_rule_name"
                android:lines="1"
                android:textColor="@color/primary_text"
...
